--- a/DevForm/DevFormAz/DevFormAz/Views/Home/UsersInspectPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/UsersInspectPage.cshtml
@@ -1,4 +1,5 @@
-﻿    <!-- Main Content -->
+﻿@model DevFormAz.Models.DevUsersVm
+    <!-- Main Content -->
 <section class="pageWrapperForIndex mt-3 mb-3">
     <div class="container">
         <div id="usersList">
@@ -7,22 +8,43 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Axtar</button>
             </div>
             <div class="row">
-                <div class="col-md-4 col-12 col-sm-6 col-lg-3">
-                    <div class="userBox">
-                        <div class="userHead">
-                            <img width="90" src="~/Public/Images/UsersFolder/ProfilePic/unnamed.jpg" alt="">
-                            <h5><a href="#">Nurlan Huseynov</a></h5>
-                        </div>
-                        <div class="userJob">
-                            <p>Web Developer</p>
-                        </div>
-                        <div class="userPopularity">
-                            <p class="userFollowers">İzləyici:<span>15000</span></p>
-                            <p class="userFollowers">İzləyir: <span>25</span></p>
+                @foreach (var item in Model.UserDetails)
+                {
+                    <div class="col-md-4 col-12 col-sm-6 col-lg-3">
+                        <div class="userBox">
+                            <div class="userHead">
+                                @if (item.Image != null)
+                                {
+                                    <img src="~/Public/Images/UsersFolder/ProfilePic/@item.Image" alt="">
+
+                                }
+                                else
+                                {
+                                    <img  src="~/Public/Images/UsersFolder/ProfilePic/devAvatar.svg" alt="">
+
+                                }
+                                <h5><a href="#">@item.User.FirstName @item.User.Lastname</a></h5>
+                            </div>
+                            <div class="userJob">
+                                @if (item.Specialty != null)
+                                {
+                                    <p>@item.Specialty</p>
+                                }
+                                else
+                                {
+                                    <p>Qeyd edilmeyib</p>
+                                }
+
+                            </div>
+                            <div class="userPopularity">
+                                <p class="userFollowers">İzləyici:<span>@Model.Subscribes.Where(f=>f.FollowerId == item.Id).Count()</span></p>
+                                <p class="userFollowers">İzləyir: <span>@Model.Subscribes.Where(f => f.FollowId == item.Id).Count()</span></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-               
+                }
+
+
             </div>
         </div>
     </div>
