--- a/DevForm/DevFormAz/DevFormAz/Views/Home/UsersInspectPage.cshtml
+++ b/DevForm/DevFormAz/DevFormAz/Views/Home/UsersInspectPage.cshtml
@@ -37,8 +37,8 @@
 
                             </div>
                             <div class="userPopularity">
-                                <p class="userFollowers">İzləyici:<span>@Model.Subscribes.Where(f=>f.FollowerId == item.Id).Count()</span></p>
-                                <p class="userFollowers">İzləyir: <span>@Model.Subscribes.Where(f => f.FollowId == item.Id).Count()</span></p>
+                                <p class="userFollowers">İzləyici:<span>@Model.Subscribes.Where(f=>f.FollowId == item.Id).Count()</span></p>
+                                <p class="userFollowers">İzləyir: <span>@Model.Subscribes.Where(f => f.FollowerId == item.Id).Count()</span></p>
                             </div>
                         </div>
                     </div>
